v1.0.0 ending